--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,18 +13,18 @@
         }'
     ></script>
     <script>
-      var oView = new sap.ui.view({
-        viewName: "atdev.view.Main",
-        type: "JS",
-        id: "viewOne",
-      });
-      oView.placeAt("elm1");
-      var oViewXml = new sap.ui.view({
-        viewName: "atdev.view.My",
-        type: "XML",
-        id: "viewTwo",
-      });
-      oViewXml.placeAt("elm2");
+      // var oView = new sap.ui.view({
+      //   viewName: "atdev.view.Main",
+      //   type: "JS",
+      //   id: "viewOne",
+      // });
+      // oView.placeAt("elm1");
+      // var oViewXml = new sap.ui.view({
+      //   viewName: "atdev.view.My",
+      //   type: "XML",
+      //   id: "viewTwo",
+      // });
+      // oViewXml.placeAt("elm2");
       var oEmpView = new sap.ui.view({
         viewName: "atdev.view.EmpDetails",
         type: "XML",
