fix complex binding and integrate tables

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
       data-sap-ui-resourceroots='{
             "atdev": "./"
         }'
+      data-sap-ui-xx-bindingSyntax="complex"
     ></script>
     <script>
       // var oView = new sap.ui.view({
